--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .Header {
-    color: white !important;
+    color: rgb(77, 88, 241) !important;
     margin-top: 36px !important;
     margin-bottom: 24px !important;
 }
