--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -10,8 +10,21 @@
 
 .Icon {
     color: #27c7e4;
+    font-size: 80px !important;
 }
 
 .Clicked {
     pointer-events: none;
+}
+
+@media only screen and (max-width: 800px){
+
+    .Paper {
+    width: 55px;
+    height: 55px;
+}
+.Icon {
+    color: #27c7e4;
+    font-size: 50px !important;
+}
 }
